updates to Animal model forthcoming

--- a/doc/styles.css
+++ b/doc/styles.css
@@ -69,7 +69,7 @@ body{
    data           #EEEEBB olive
    result        #EEDDBB brown
    sparql/text     #DDEEFF blue
-   syntax fules   #F6F6F6 grey
+   syntax rules   #F6F6F6 grey
  NB: Githubpages not recognizing background: for color.  
 */
 
