--- a/doc/styles.css
+++ b/doc/styles.css
@@ -125,9 +125,11 @@ body{
 .shacl{
   background-color: #DDEEBB;
 }  
+/*
 .report{
  background-color: #EEDDBB; 
 }
+*/
 
 .code{
   font-family: courier;
@@ -243,7 +245,7 @@ pre.example-other {
                                             
 pre.shacl:before,                  
 pre.data:before, 
-pre.example-rule:before, /*TW*/                   
+pre.example-rule:before, /*TW*/
 pre.report:before,                 
 pre.example-other:before {                  
     background: white;                      
@@ -268,21 +270,20 @@ pre.shacl:before {
     font-weight: bold;
 }
                                            
-pre.data {                          
-    background: #eeb;                       
-}                                           
-pre.data,                           
-pre.data:before {                   
-    border: 1px solid #9E9E27;                 
-}                                           
-pre.data:before {                   
-    color: #9E9E27;                            
+pre.data {
+  background: #eeb;
+}
+pre.data,
+pre.data:before {
+    border: 1px solid #9E9E27;
+}
+pre.data:before {
+    color: #9E9E27;
     content: "Data";
     width: 4em;
     font-weight: bold;
-}                                           
-                                            
-//////////////////////////////////////
+}
+
 pre.report {
     background: #EEDDBB;
 }
@@ -296,24 +297,6 @@ pre.report:before {
     width: 4em;
     font-weight: bold;
 }
-
-//////////////////////////////////////
-pre.report {                          
-    background: #edb;                       
-}                                           
-pre.report,                           
-pre.report:before,                    
-.report th,                        
-.report td {                       
-    border: 1px solid #D09F41;                 
-}                                           
-pre.report:before {
-    color: #D09F41; /* text color */
-    content: "Report";
-    width: 6em;
-    font-weight:bold;
-}
-
 
 
 /*TW RULE */
