USUBJID shapes and testing

--- a/doc/styles.css
+++ b/doc/styles.css
@@ -59,7 +59,7 @@ body{
 }
 
 .goodData{
-  color: #759e27;     /* dark green */
+  color: #486118;     /* very dark green */
   font-weight: bold;
 }
 
