draft doc for SD0083/SD1001 complete.

--- a/doc/styles.css
+++ b/doc/styles.css
@@ -58,7 +58,7 @@ body{
   color: #759e27;     /* dark green */
 }
 
-.goodData{
+.shapeName, .goodData{
   color: #486118;     /* very dark green */
   font-weight: bold;
 }
